[DASH-1352] fix checkbox styling (#54)
* [DASH-1352] Accissibility + classnames refactoring

* [DASH-1352] minor tweaks to check style

* this only needs the tweak on mobile

* removed extra space

* [DASH-1352] using new SVG

* [DASH-1352] fixed CSS to modify checkbox styles

* update changelog and VRT

* actually update changelog

* 0.14.3

* 0.14.4

* reverted files I shouldn't have changed

* classes => cn

* 0.14.6

* [DASH-1352] removed unnecessary tests

* [DASH-1352] modified CSS to use currentColor

* [DASH-1352] changed SVG fills to currentColor

* [DASH-1352] renamed checkbox svg preset class

--- a/Checkbox/Checkbox.css
+++ b/Checkbox/Checkbox.css
@@ -1,32 +1,9 @@
-._checkbox {
-  border: 1px solid currentColor;
-  border-radius: 2px;
-  box-sizing: border-box;
-  background: var(--white);
-}
-
-._checkbox.disabled {
-  color: var(--slateLighter);
-  border-color: var(--slateLighter);
-}
-
-.checkboxContainer:focus-within ._checkbox.disabled,
-.checkboxContainer:hover ._checkbox.disabled {
-  color: var(--slateLighter);
-}
-
 .checkboxContainer {
   height: 16px;
   width: 16px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  color: var(--slateDarkest);
-}
-
-.checkboxContainer:focus-within ._checkbox,
-.checkboxContainer:hover ._checkbox {
-  color: var(--blueDarker);
 }
 
 .checkboxInput {
@@ -45,77 +22,24 @@
 .checkboxState {
   width: 100%;
   height: 100%;
-}
-
-.checkboxStateUnchecked {
-  composes: _checkbox;
-}
-
-.checkboxStateChecked {
-  composes: _checkbox;
-}
-
-.checkboxStatePreset {
-  composes: _checkbox;
-  border: 0;
-  background: var(--slateLighter);
-}
-
-.checkboxStateIndeterminate {
-  composes: _checkbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.checkboxStateIndeterminate::before {
-  content: '';
-  width: 50%;
-  height: 2px;
-  background: currentColor;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -1px;
-  margin-left: -25%;
-}
-
-.checkboxStateChecked::before,
-.checkboxStatePreset::before {
-  content: '';
-  transform: rotate(45deg);
-  position: absolute;
-  left: 30%;
-  top: 20%;
-  width: 25%;
-  height: 44%;
-  border: 2px solid currentColor;
-  border-top: 0;
-  border-left: 0;
-  border-radius: 1px;
-}
-
-.checkboxStatePreset.disabled {
-  color: var(--slateDarkest);
-  background: var(--slateLightest);
-  border: 0;
-}
-
-.checkboxContainer:focus-within .checkboxStatePreset,
-.checkboxContainer:hover .checkboxStatePreset {
   color: var(--slateDarkest);
 }
 
-.checkboxContainer:focus-within .checkboxStatePreset.disabled,
-.checkboxContainer:hover .checkboxStatePreset.disabled {
-  color: var(--slateDarkest);
+.checkboxContainer:focus-within .checkboxState,
+.checkboxContainer:hover .checkboxState {
+  color: var(--blueDarker);
+}
+
+.checkboxState.disabled {
+  color: var(--slateLighter);
+}
+
+/* this is the only one that needs to adjust the background color */
+.checkboxState.disabled :global(.checkbox-svg-fill-preset) {
+  fill: var(--slateLightest);
 }
 
 @media (--screenMobile) {
-  ._checkbox {
-    border-width: 2px;
-  }
-
   .checkboxContainer {
     width: 20px;
     height: 20px;
